Добавил экран входа, регистрации, товаров и корзины